Bug 883522 - Add a message attribute to nsIDOMGeoPositionError.idl and a GetMessage method to nsGeolocation.cpp. r=jdm